# 08_CPP_and_C_project

./: README.md
01_Linux/09-fd-creat-open/: a.out
01_Linux/11-fd-lseek/: a.out
01_Linux/12-fd-ls-stat/: a.out  ls-l.c  stat.c
01_Linux/12_fd-ls-stat/: ls
01_Linux/13-fd-chmod/: access.c
01_Linux/14-fd-mkdir/: a.out  rename.c
01_Linux/14_fd-mkdir/: chdir.c  mkdir.c
01_Linux/16-fd-dup/: a.out
01_Linux/16_fd-dup/: dup2.c
01_Linux/17_fd-fcntl/: a.out
01_Linux/18_process-fork/: hello.c
01_Linux/19-process-execl/: hello
01_Linux/19_process-execl/: execl
01_Linux/20_process/: exit  exit.c  orphan  orphan.c  zombie.c
01_Linux/21_process/: test.py  waitpid  waitpid.c
01_Linux/22_singal/: a.out  fpathconf.c  pip.c
01_Linux/23_singal/: mkfifo.c
01_Linux/24_singal/: chatA  chatA.c  chatB.c
01_Linux/25_singal/: cpy.txt  mmap-anon  mmap-parent-child-ipc.c
01_Linux/26_singal/: alarm  core.c  kill  kill.c  setitimer  setitimer.c  sigaction.c  sigchld.c  sigprocmask.c  sigset
01_Linux/27_singal/: read_shm.c  write_shm.c
01_Linux/28_singal/: daemon
01_Linux/29_pthread/: attr  cancel  exit  pthread_attr.c  pthread_cancel.c  (+2 more)
02_webserver/00_webserver/: CMakeLists.txt
02_webserver/00_webserver/adong/: config.h  log.cpp  log.h
03_Biling/: a.out  addition.cpp  div.cpp  math.cpp  mut.cpp  question.cpp  test.cpp  test2.cpp
04_teach_csp/: 00_goldbach.cpp  a.out  function.cpp  test1.cpp
05_csapp/: a.out  const_pointer.c  inplace_swap.cpp  show_bytes.cpp  show_bytes.h
06_cpp_basic/: a.out  array_pointer.c  mycstring.cpp  test.c  thispointer.cpp
(+188 files in other folders)
